# cellify

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  NAMES.md  README.md  _config.yml  pyproject.toml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: autorelease.yml  check_cmdline.yml  pre-commit.yml  publish.yml  tests.yml
examples/: README.md
examples/1_vasp_supercell/: POSCAR  POSCAR_222  POSCAR_doped  POSCAR_scaled  run.sh
examples/2_espresso_doping/: qe.in  qe_222.in  qe_doped.in  run.sh
examples/3_primitive_to_conventional/: POSCAR_conventional  POSCAR_conventional_222  POSCAR_primitive  run.sh
examples/4_espresso_supercell/: 3csic.in  3csic_conventional.in  3csic_relaxed.out  3csic_scf.in  3csic_supercell_222.in  3csic_vacancy.in  run.sh
scripts/: generate_images.py
src/cellify/: __init__.py  cli.py  core.py  parser.py  viewer.py
src/cellify/adapters/: __init__.py  base.py  espresso.py  standard.py
tests/: POSCAR  POSCAR_222  POSCAR_doped  POSCAR_mindist  divacancy_relax_gamma.out  qe.in  qe_222.in  test_cellify.py
